--- a/src/index.html
+++ b/src/index.html
@@ -189,7 +189,7 @@
 							</div>
 						</div>
 					</div>
-					
+
 					<div class="d-block d-sm-none Mob-relative">
 						<img src="assets/Home_mobile.jpg" style="width: 100%">
 						<div class="banner-cnt-index">
@@ -287,7 +287,7 @@
 					</section>
 			</div>
 		</div>
-		<div class="container our-service">
+		<div class="container our-service" id="Our-Service">
 			<div class="row">
 				<div class="col-sm-12 col-12">
 					<div class="welcome-title text-center"><span class="hr-line"></span> OUR <strong class="Blue-Head">SERVICES</strong> <span class="hr-line"></span></div>
@@ -421,7 +421,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="container">
+		<div class="container" id="lets-connect">
 			<div class="lets-talk">
 				<div class="row">
 					<div class="col-sm-6 contact-left d-flex" id="contact-left">
