--- a/src/about.html
+++ b/src/about.html
@@ -133,6 +133,14 @@
 				</div>
 			</div>
 		</div>
+		<div class="over-lay" style="display: none;">
+			<a href="javascript:void(0)" onclick="closeNav()" class="close-pop" style="color: #ccc !important;">
+					&times;
+			</a>
+			<iframe width="600" height="380" style="display: none;" src="https://www.youtube.com/embed/tgbNymZ7vqY" allowfullscreen>
+		</iframe>
+		</div>
+		
 		<div class="container">
 			<div class="about-list text-center">
 				<ul class="nav justify-content-center">
